--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "lint": "node ./node_modules/eslint/bin/eslint.js --ext .jsx --ext .js --ext .ts --ext .tsx src/",
-    "fix": "prettier-eslint --write 'src/**/*.{ts,tsx}'"
+    "fix": "prettier-eslint --write 'src/**/*.{ts,tsx}'",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
@@ -24,8 +26,10 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
   }
